--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-tabs": "^3.1.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "yup": "^0.29.3"
   },
